# san_francisco_311

./: .gitignore  README.md  dbt_creation.sh  newshell.sh  pyproject.toml
dash/: app.py  components.py  data.py
dbt_san_francisco_311/: dbt_project.yml
dbt_san_francisco_311/models/analytics/: schema.yml
dbt_san_francisco_311/models/analytics/frequency/: analytics__frequency__category.sql  analytics__frequency__complaint_type.sql  analytics__frequency__day_opened.sql  analytics__frequency__hour_opened.sql  analytics__frequency__month_opened.sql  analytics__frequency__neighborhood.sql  analytics__frequency__source.sql  analytics__frequency__year_opened.sql
dbt_san_francisco_311/models/analytics/resolution_time/: analytics__resolution_time__category.sql  analytics__resolution_time__complaint_type.sql  analytics__resolution_time__day_opened.sql  analytics__resolution_time__hour_opened.sql  analytics__resolution_time__month_opened.sql  analytics__resolution_time__neighborhood.sql  analytics__resolution_time__neighbourhoods.sql  analytics__resolution_time__source.sql  (+1 more)
dbt_san_francisco_311/models/base/: main.sql  schema.yml
dbt_san_francisco_311/models/features/: main_temporal.sql  schema.yml
docs/_templates/autoapi/: autoapi_class.rst  autoapi_function.rst
docs/source/: api.rst  conf.py
notebooks/: Workbench.ipynb
notebooks/.ipynb_checkpoints/: Workbench-checkpoint.ipynb
san_francisco_311.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
san_francisco_311/config/: my_test_function.py
sf311/: __init__.py
sf311/utils/: connector.py
(+1 files in other folders)
