# Write a .toml file that can take input from the call to cookiecutter
# and use it to fill in the template


[project]

name = "sf311"

version = "0.1.0"

readme = "README.md"

license = {text = "MIT License"}

requires-python = ">=3.6"

[tool.poetry.dependencies]

python = "^3.6"

[tool.poetry.dev-dependencies]

pytest = "^5.2"

pytest-cov = "^2.8"

[tool.poetry.scripts]

sf311 = "sf311.__main__:main"

dependencies = ["pyyaml"]


[tool.setuptools]
packages = ["sf311"]

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinx-rtd-theme",
    "myst-parser",
    "myst-nb",
    "sphinx-copybutton",
    "sphinx-autoapi"
]

